keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      volumes:
        - name: pvc
          persistentVolumeClaim:
            claimName: keycloak-pvc
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak
        args: ["start-dev"]
        ports:
          - name: http
            containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
        volumeMounts:
          - name: pvc
            mountPath: /opt/keycloak/data/h2
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 80
      targetPort: 8080
