postgres-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-test
spec:
  selector:
    matchLabels:
      app: postgres-test
  template:
    metadata:
      labels:
        app: postgres-test
    spec:
      containers:
        - name: postgres-test-db
          image: docker.io/postgres
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-test
        - name: postgres-test-backend
          image: arvidsson.azurecr.io/postgres-test:latest
      volumes:
      - name: postgres-test
        persistentVolumeClaim:
          claimName: postgres-test
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-test
spec:
  selector:
    app: postgres-test
  type: NodePort
  ports:
    - name: postgres-test-backend
      port: 3002
      nodePort: 30002
      targetPort: 8080
    - name: postgres-test-db
      port: 3003
      nodePort: 30003
      targetPort: 5432
