sqlite-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlite-test
spec:
  selector:
    matchLabels:
      app: sqlite-test
  template:
    metadata:
      labels:
        app: sqlite-test
    spec:
      containers:
      - name: sqlite-test-aspnetcore
        image: arvidsson.azurecr.io/sqlite-test:latest
        volumeMounts:
        - mountPath: /sqlite
          name: sqlite-test
      volumes:
      - name: sqlite-test
        persistentVolumeClaim:
          claimName: sqlite-test
---
apiVersion: v1
kind: Service
metadata:
  name: sqlite-test
spec:
  selector:
    app: sqlite-test
  type: NodePort
  ports:
    - name: sqlite-test
      port: 3002
      nodePort: 30002
      targetPort: 8080
