testapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp
spec:
  selector:
    matchLabels:
      app: testapp
  template:
    metadata:
      labels:
        app: testapp
    spec:
      containers:
      - name: vue
        image: $CONTAINER_REGISTRY/testapp:7f523ac1505c0211e3270a2bc0072250299d8869
        resources:
          limits:
            memory: "1Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: testapp
spec:
  selector:
    app: testapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
