ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ragelberries
spec:
  tls:
  - hosts:
    - ragelberries.net
    secretName: $CERT_NAME
  rules:
  - host: ragelberries.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              name: http
  - host: testapp.ragelberries.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 80
  - host: testapp-api.ragelberries.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: testapp
            port:
              number: 8080
  - host: keycloak.ragelberries.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              name: http
